--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
        </li>
     </li>
   </ul>
-  
+  <iframe name="boxwish" src="" width="100%" height="100%" frameborder="0" scrolling="yes" style="width: 100%;"> </iframe>
 
 </body>
 
